[package]
name = "questrade-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/lucaspanjer/questrade-client"
description = "Async Rust client for the Questrade REST API with automatic OAuth token management"
keywords = ["questrade", "trading", "api", "finance"]
categories = ["api-bindings", "finance"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "query"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
anyhow = "1.0"
wiremock = "0.6"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.49", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
